<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopScreenHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_dark_purple"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/shopScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_weight="3">

        <GridLayout
            android:id="@+id/shopGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="false"
            android:columnCount="1"
            android:rowCount="4">

            <com.example.danikkombat.ui.custom_view.GridItemCustomView
                android:id="@+id/x2mul"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:layout_row="0"
                app:gridTitle="@string/x2"
                app:gridPrice="@string/c100"
                />

            <com.example.danikkombat.ui.custom_view.GridItemCustomView
                android:id="@+id/x5mul"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:layout_row="1"
                app:gridTitle="@string/x5"
                app:gridPrice="@string/c500"
                />

            <com.example.danikkombat.ui.custom_view.GridItemCustomView
                android:id="@+id/x10mul"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:layout_row="2"
                app:gridTitle="@string/x10"
                app:gridPrice="@string/c2500"
                />

            <com.example.danikkombat.ui.custom_view.GridItemCustomView
                android:id="@+id/x50mul"
                android:layout_width="match_parent"
                android:layout_row="3"
                android:layout_margin="0dp"
                app:gridPrice="@string/c7000"
                app:gridTitle="@string/x20" />

        </GridLayout>

    </ScrollView>

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</LinearLayout>